解决sqlite路径问题前  做一次提交

--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,9 @@
 shamefully-hoist=true
 node-linker=isolated
 
+loglevel=info
 
-# ELECTRON_MIRROR="https://npmmirror.com/mirrors/electron/"
-python=D:/Tools/python312/python.exe
-# registry = "https://mirrors.huaweicloud.com/repository/npm/"
-# electron_builder_binaries_mirror="https://mirrors.huaweicloud.com/electron-builder-binaries/"
+
+ELECTRON_MIRROR="https://npmmirror.com/mirrors/electron/"
+python=D:\Tools\python27\python.exe
+registry = "https://registry.npmmirror.com"
