--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,6 +23,7 @@
     "@types/node": "20.12.5",
     "electron": "29.2.0",
     "electron-builder": "24.13.3",
-    "typescript": "5.4.4"
+    "typescript": "5.4.4",
+    "sqlite3": "^5.1.7"
   }
 }
