--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -71,6 +71,6 @@
 		"ignoreDeprecations": "5.0",
 		"suppressImplicitAnyIndexErrors": true
 	},
-	"include": ["src/**/*.ts", "src/**/*.vue", "src/**/*.tsx", "src/**/*.d.ts"], // **Represents any directory, and * represents any file. Indicates that all files in the src directory will be compiled
+	"include": ["src/**/*.ts", "src/**/*.vue", "src/**/*.tsx", "src/**/*.d.ts", "../backend/preload.d.ts",], // **Represents any directory, and * represents any file. Indicates that all files in the src directory will be compiled
 	"exclude": ["node_modules", "dist"] // Indicates the file directory that does not need to be compiled
 }
