添加了typeorm,  报错找不到sqlite3文件，待解决

--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "CommonJS",
+    "module": "commonjs",
     "moduleResolution": "node",
     "strict": false,
     "jsx": "preserve",
@@ -17,6 +17,8 @@
     "skipLibCheck": true
   },
   "include": [
+    "config/**/*.ts",
+    "config/**/*.d.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
     "entities/**/*.ts",
